# CMakeAssignmentGrader

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: build-tests.cmake  env-setup.cmake  gen-comments.cmake  pull-repos.cmake
grader/: CMakeLists.txt  assignment-download.cmake  grader.cmake
tests/: example_tests.cpp
